--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Проект "Комменты"</title>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="./styles.css">
+    <link type="image/png" sizes="48x48" rel="icon" href="./favicon.ico">
   </head>
 
   <body>
