--- a/index.html
+++ b/index.html
@@ -10,57 +10,7 @@
   <body>
     <div class="container">
       <ul class="comments" id="comment-list">
-        <li class="comment">
-          <div class="comment-header">
-            <div>Глеб Фокин</div>
-            <div>12.02.22 12:18</div>
-          </div>
-          <div class="comment-body">
-            <div class="comment-text">
-              Это будет первый комментарий на этой странице
-            </div>
-          </div>
-          <div class="comment-footer">
-            <div class="likes">
-              <span class="likes-counter">3</span>
-              <button class="like-button"></button>
-            </div>
-          </div>
-        </li>
-        <li class="comment">
-          <div class="comment-header">
-            <div>Варвара Н.</div>
-            <div>13.02.22 19:22</div>
-          </div>
-          <div class="comment-body">
-            <div class="comment-text">
-              Мне нравится как оформлена эта страница! ❤
-            </div>
-          </div>
-          <div class="comment-footer">
-            <div class="likes">
-              <span class="likes-counter">75</span>
-              <button class="like-button like-button--active"></button>
-            </div>
-          </div>
-        </li>
-        <li class="comment comment--mine">
-          <div class="comment-header">
-            <div>@august-ra</div>
-            <div>17.03.24 13:05</div>
-          </div>
-          <div class="comment-body">
-            <div class="comment-text">
-              есть-таки вопросики к дизайнеру.. ))
-            </div>
-          </div>
-          <div class="comment-footer">
-            <div class="likes">
-              <span class="likes-counter">1</span>
-              <button class="like-button"></button>
-            </div>
-          </div>
-        </li>
+        <!-- vacant -->
       </ul>
 
       <div class="add-form">
