--- a/index.html
+++ b/index.html
@@ -16,8 +16,22 @@
       <div class="add-form">
         <label class="hidden" for="name-input">Имя:</label>
         <input class="add-form-name" type="text" placeholder="Введите ваше имя" id="name-input">
-        <label class="hidden" for="comment-input">Комментарий:</label>
-        <textarea class="add-form-text" placeholder="Введите ваш коментарий" rows="4" id="comment-input"></textarea>
+
+        <label class="hidden" for="quote-input">Цитата:</label>
+        <input class="add-form-name hidden" type="text" id="quote-input">
+
+        <div class="comment-editor">
+          <div class="quote flex">
+            <div class="left" id="quote-text">
+              <!-- vacant -->
+            </div>
+            <button class="cancel-quote-button" id="quote-cancel">&times;</button>
+          </div>
+
+          <label class="hidden" for="comment-input">Комментарий:</label>
+          <textarea class="add-form-text" placeholder="Введите ваш коментарий" rows="4" id="comment-input"></textarea>
+        </div>
+
         <div class="add-form-row">
           <button class="add-form-button" id="comment-add">Написать</button>
           <button class="add-form-button" id="comment-remove">Удалить последний комментарий</button>
