Finished the homework

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <input class="add-form-name hidden" type="text" id="quote-input">
 
         <div class="comment-editor">
-          <div class="quote flex">
+          <div class="quote flex" id="quote-box">
             <div class="left" id="quote-text">
               <!-- vacant -->
             </div>
