Moved all scripts to their folder

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       </div>
     </div>
 
-    <script type="module" src="./main.js"></script>
-    <script type="module" src="./thumb.js"></script>
+    <script type="module" src="js/main.js"></script>
+    <script type="module" src="js/thumb.js"></script>
   </body>
 </html>
