--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <textarea class="add-form-text" placeholder="Введите ваш коментарий" rows="4" id="comment-input"></textarea>
         </div>
 
-        <div class="add-form-row">
+        <div class="add-form-row flex">
           <button class="add-form-button" id="comment-add">Написать</button>
           <button class="add-form-button" id="comment-remove">Удалить последний комментарий</button>
         </div>
