--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 
         <div class="add-form-row flex">
           <button class="add-form-button" id="comment-add">Написать</button>
+          <span class="loader hidden" id="loader"></span>
           <button class="add-form-button" id="comment-remove">Удалить последний комментарий</button>
         </div>
       </div>
