Done the main part

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </div>
 
       <ul class="comments" id="comment-list">
-        <!-- vacant -->
+        <li>Пожалуйста, подожди, идёт первая загрузка.<span style="opacity: 0">..</span></li>
       </ul>
 
       <div class="add-form">
@@ -49,6 +49,7 @@
       </div>
     </div>
 
+    <script src="./js/introducer.js"></script>
     <script type="module" src="js/main.js"></script>
     <script type="module" src="js/thumb.js"></script>
   </body>
