--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </div>
 
       <ul class="comments" id="comment-list">
-        <li>Пожалуйста, подожди, идёт первая загрузка.<span style="opacity: 0">..</span></li>
+        <li>Пожалуйста, подождите, идёт первая загрузка...</li>
       </ul>
 
       <div class="add-form">
