--- a/index.html
+++ b/index.html
@@ -49,7 +49,43 @@
       </div>
     </div>
 
-    <script src="./js/introducer.js"></script>
+    <script> //src="./js/introducer.js">
+
+        const lstComments = document.getElementById("comment-list")
+
+        let counter = -1
+
+        const timerId =  setInterval(() => {
+            ++counter
+
+            const dots = (() => {
+                const cnt = counter % 3 + 1
+                const leftPart = "".padEnd(cnt, ".")
+
+                if (cnt === 3)
+                    return leftPart
+                else
+                    return `${leftPart}<span style="opacity: 0">${"".padEnd(3 - cnt, ".")}</span>`
+            })()
+
+            const text = (() => {
+                if (counter < 9)
+                    return "Пожалуйста, подождите, идёт первая загрузка"
+                else
+                    return "Загрузка идёт слишком долго, но, пожалуйста, подождите ещё"
+            })()
+
+            lstComments.innerHTML = `<li>${text}${dots}</li>`
+        }, 400)
+
+        function clearIntroducer() {
+            clearInterval(timerId)
+
+            // dispose the function for next times
+            clearIntroducer = function () {}
+        }
+
+    </script>
     <script type="module" src="js/main.js"></script>
     <script type="module" src="js/thumb.js"></script>
   </body>
