Deleted extra module

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       </div>
     </div>
 
-    <script> //src="./js/introducer.js">
+    <script>
 
         const lstComments = document.getElementById("comment-list")
 
