Updated render logic

--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
         <div class="mode-inactive" id="devil-mode">Devil mode</div>
       </div>
 
-      <ul class="comments" id="comment-list">
-        <li>Пожалуйста, подождите, идёт первая загрузка...</li>
-      </ul>
+      <div id="app">
+        <ul class="comments" id="comment-list">
+          <li>Пожалуйста, подождите, идёт первая загрузка...</li>
+        </ul>
+      </div>
 
       <div class="add-form">
         <label class="hidden" for="name-input">Имя:</label>
