Made a logout button

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
           <div class="arm" id="arm-button"></div>
         </div>
         <div class="mode-inactive" id="devil-mode">Devil mode</div>
+        <div class="user-info">
+          <!-- vacant -->
+        </div>
       </div>
 
       <div id="app">
