--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         }
 
     </script>
-    <script type="module" src="./js/main.js"></script>
+    <script type="module" src="./dist/main.js"></script>
     <script type="module" src="./js/thumb.js"></script>
   </body>
 </html>
